--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "commit": "git add . && cz",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -27,6 +28,7 @@
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
     "@types/react-redux": "^7.1.24",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "^8.5.0",
@@ -34,5 +36,10 @@
     "prettier": "^2.6.2",
     "sass": "^1.50.1",
     "typescript": "4.6.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
