--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-markdown": "^8.0.3",
     "react-redux": "^8.0.1",
     "redux-thunk": "^2.4.1",
+    "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "rxjs": "^7.5.5",
     "use-immer": "^0.7.0"
